--- a/themes/konfetti/layouts/index.html
+++ b/themes/konfetti/layouts/index.html
@@ -2,7 +2,7 @@
 	{{ partial "header.html" . }}
 
 	{{ if .Params.image }}
-	<img src="{{ .Site.BaseURL }}img/{{ .Params.image }}" style="padding-bottom: 1em" alt=""/>
+	<img src="/img/{{ .Params.image }}" style="padding-bottom: 1em" alt=""/>
 	{{ end }}
 
     {{ .Content }}
