--- a/themes/konfetti/layouts/partials/footer.html
+++ b/themes/konfetti/layouts/partials/footer.html
@@ -3,7 +3,7 @@
       </div>
 
       <div id="footer">
-	Copyright 2021 {{ .Site.Title }} - <a href="{{ .Site.BaseURL }}impressum">Impressum / Datenschutz</a>
+	Copyright 2021 {{ .Site.Title }} - <a href="/impressum">Impressum / Datenschutz</a>
       </div>
 
     </div>
