--- a/themes/konfetti/layouts/partials/header.html
+++ b/themes/konfetti/layouts/partials/header.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>{{ .Title }} &mdash; {{ .Site.Title }}</title>
-    <link rel="stylesheet" href="{{ .Site.BaseURL }}css/konfetti.css"/>
+    <link rel="stylesheet" href="/css/konfetti.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=3.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     {{ .Hugo.Generator }}
@@ -14,7 +14,7 @@
 
       <div id="header">
 	       <div id="site-logo">
-	           <a href="{{ .Site.BaseURL }}"><img src="{{ .Site.BaseURL }}img/logo.png"></a>
+	           <a href="/"><img src="/img/logo.png"></a>
          </div>
       </div>
 
