--- a/themes/konfetti/layouts/_default/single.html
+++ b/themes/konfetti/layouts/_default/single.html
@@ -2,7 +2,7 @@
 
 {{ if .Params.image }}
 <div id="summary">
-	<img src="{{ .Site.BaseURL }}img/{{ .Params.image }}" alt=""/>
+	<img src="/img/{{ .Params.image }}" alt=""/>
 </div>
 {{ end }}
 
