--- a/themes/konfetti/layouts/_default/list.html
+++ b/themes/konfetti/layouts/_default/list.html
@@ -1,6 +1,6 @@
 {{ partial "header.html" . }}
 
-{{ if hasPrefix .URL "/blog/" }}
+{{ if hasPrefix .Permalink "/blog/" }}
 
   {{ range sort .Paginator.Pages }}
     <h2><a href="{{ .Permalink }}">{{ .Title }}</a></h2>
