--- a/themes/konfetti/layouts/partials/header.html
+++ b/themes/konfetti/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="/css/konfetti.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=3.0"/>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    {{ .Hugo.Generator }}
+    {{ hugo.Generator }}
   </head>
 
   <body>
