--- a/themes/konfetti/static/css/konfetti.css
+++ b/themes/konfetti/static/css/konfetti.css
@@ -1,10 +1,11 @@
-@import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Open+Sans:400,400i,600,600i,700,700i');
+@import url('https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i|Open+Sans:400,400i,500,500i');
 
 html,
 body {
   background: #fff;
   color: #333;
   font-family: 'Open Sans', sans-serif;
+  font-weight: 400;
 }
 
 #container {
@@ -120,7 +121,7 @@ h5,
 h6 {
   /*font-family: 'Lora', serif;*/
   font-family: 'Open Sans', sans-serif;  
-  font-weight: 600;
+  font-weight: 500;
   color: #205C90;
 }
 
@@ -136,7 +137,7 @@ h6 {
 }
 
 #article dl dt {
-  font-weight: bold;
+  font-weight: 500;
 }
 
 #article dl dt em {
@@ -158,6 +159,22 @@ hr {
   border-right: 0;
   margin: 2.5em 0;
 }
+
+/*new styles*/
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+table td, table th {
+  border: 1px solid #cccccc;
+  padding: 8px 12px;
+}
+
+b{
+  font-weight: 500;
+}
+/*---*/
 
 span.upper {
   text-transform: uppercase;
@@ -206,7 +223,7 @@ ul.pagination {
   color: #555;
   text-decoration: none;
 }
-
+/*
 th.header {
   width: 1px;
   white-space: nowrap;
@@ -221,7 +238,7 @@ td.cell {
   font-weight: bold;
   .border-style: solid;
   background-color: #eee;
-}
+}*/
 
 @media (min-width: 768px) {
 }
